src/objects/testInCountry1__Object_relationship_fields__c.object
<CustomObject>
    <fields>
        <fullName>testInCountry1__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Field_name__c</fullName>
        <label>Field name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__FixedValue__c</fullName>
        <description>The value for a fixed function.</description>
        <label>Fixed value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__HashFunction__c</fullName>
        <label>Hash Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>uniqueHash</fullName>
                </value>
                <value>
                    <fullName>uniqueEmailHash</fullName>
                </value>
                <value>
                    <fullName>sha256</fullName>
                </value>
                <value>
                    <fullName>defaultNumber</fullName>
                </value>
                <value>
                    <fullName>defaultBoolean</fullName>
                </value>
                <value>
                    <fullName>defaultDate</fullName>
                </value>
                <value>
                    <fullName>defaultDateTime</fullName>
                </value>
                <value>
                    <fullName>nothing</fullName>
                </value>
                <value>
                    <fullName>defaultText</fullName>
                </value>
                <value>
                    <fullName>valueOne</fullName>
                </value>
                <value>
                    <fullName>fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testInCountry1__IsCompound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Compound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__IsCountryField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Country field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__IsLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__IsSavedToInCountry__c</fullName>
        <formula>NOT( OR( testInCountry1__IsCompound__c,  testInCountry1__IsCountryField__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Saved to InCountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__LookupObjectApiName__c</fullName>
        <label>LookupObjectApiName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__LookupRelationshipName__c</fullName>
        <label>Lookup Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__LookupRequiredToSelectFields__c</fullName>
        <label>Lookup Required To Select Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Salutation</fullName>
                </value>
                <value>
                    <fullName>FirstName</fullName>
                </value>
                <value>
                    <fullName>LastName</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testInCountry1__NeedHash__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Need to hash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Object_name__c</fullName>
        <label>Object name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Reference_field__c</fullName>
        <label>Reference field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Reference_order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reference order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Validation_strategy__c</fullName>
        <label>Validation strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__key__c</fullName>
        <label>key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>key1</fullName>
                </value>
                <value>
                    <fullName>key2</fullName>
                </value>
                <value>
                    <fullName>key3</fullName>
                </value>
                <value>
                    <fullName>key4</fullName>
                </value>
                <value>
                    <fullName>key5</fullName>
                </value>
                <value>
                    <fullName>key6</fullName>
                </value>
                <value>
                    <fullName>key7</fullName>
                </value>
                <value>
                    <fullName>key8</fullName>
                </value>
                <value>
                    <fullName>key9</fullName>
                </value>
                <value>
                    <fullName>key10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object relationship fields</label>
    <listViews>
        <fullName>testInCountry1__All</fullName>
        <columns>NAME</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__Object_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <filterScope>Mine</filterScope>
        <label>Full</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full_Account</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__LookupRequiredToSelectFields__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <columns>testInCountry1__HashFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>testInCountry1__Object_name__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Full Account</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full_Case</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__LookupRequiredToSelectFields__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <columns>testInCountry1__HashFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>testInCountry1__Object_name__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <label>Full Case</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full_Contact</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__LookupRequiredToSelectFields__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <columns>testInCountry1__HashFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>testInCountry1__Object_name__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Full Contact</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full_Lead</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__LookupRequiredToSelectFields__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <columns>testInCountry1__HashFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>testInCountry1__Object_name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Full Lead</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full_Opportunity</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Field_name__c</columns>
        <columns>testInCountry1__IsLookup__c</columns>
        <columns>testInCountry1__IsCompound__c</columns>
        <columns>testInCountry1__IsCountryField__c</columns>
        <columns>testInCountry1__key__c</columns>
        <columns>testInCountry1__LookupObjectApiName__c</columns>
        <columns>testInCountry1__LookupRelationshipName__c</columns>
        <columns>testInCountry1__LookupRequiredToSelectFields__c</columns>
        <columns>testInCountry1__Reference_field__c</columns>
        <columns>testInCountry1__Reference_order__c</columns>
        <columns>testInCountry1__NeedHash__c</columns>
        <columns>testInCountry1__HashFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>testInCountry1__Object_name__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Full Opportunity</label>
    </listViews>
    <nameField>
        <label>Object relationship fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects relationship fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>